﻿0.9.2
. BusinessObjects
.. Merge generated and custom classes
.. BaseEntity class
.. Clean up + finetuning

0.9.1
. BusinessObjects - StringLength attributes

0.9
. Application
.. Converted to Code First approach from Database First
... T4 files were updated to read from Code First metadata
... EF6.Utility.cs was moved to the solution
.. Switched to LocalDb instead of SQL Server 2008 R2
.. T4 include files are now under Framework\T4 folder

0.8.1
. Web - Cleaning up the old mvc controllers + views etc.

0.8
. Database
.. ResourcePool table became the main container for Organization, License and Sector tables
.. UserResourcePoolOrganization was dropped and UserOrganization was introduced

0.7
. SPA with OData + AngularJS + Breeze.js + toastr.js
. Database - Sector table Id field switched to smallint from byte
. Solution - Refactoring tt files
. Solution - nuget package updates

0.6.3
. Web - Overview text update

0.6.2
. Web - Overview text update

0.6.1
. BusinessObjects - Required attribute for Dto classes

0.6
. Facade - UnitOfWork finetuning
. General - Password for User table + basic authentication
. Web - Controller.tt was created

0.5
. SolutionItems - Local_UpdateDatabase.sql was updated to remove doktrosizlar db items
. Business + DataObjects
.. To support tables with multiple primary key, IEntity interface Id property was replaced with IsNew
. Web - Controllers finetuning

0.4.2.2
. General - Missing files were restored - attempt #2

0.4.2.1
. General - Missing files were restored

0.4.2
. General - github repo merge

0.4.1
. General - Release Notes.txt was updated

0.4
. DataObjects
.. Utility.ttinclude: Common code blocks from t4 files were moved to this file
.. Repositories were updated
. BusinessObjects
.. Metadata.t4 was moved under "Generated" folder and was modified to generated the files for once.
. Facade
.. UnitOfWork classes were created for each entity
. Web
.. Repositories + UnitOfWork updates
. General